<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelReadUID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_uid"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:padding="10dp" />

            <TextView
                android:id="@+id/textReadUID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/text_text_uid"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/design_default_color_primary_dark" />

            <TextView
                android:id="@+id/labelReadZone7ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_zone7id"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:padding="10dp" />

            <TextView
                android:id="@+id/textReadZone7ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/text_text_zone7id"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/design_default_color_primary_dark" />

            <TextView
                android:id="@+id/labelReadAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:padding="10dp" />

            <TextView
                android:id="@+id/textReadAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/text_text_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/design_default_color_primary_dark" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>