<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelWriteZone7ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_zone7id"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:padding="10dp" />

            <EditText
                android:id="@+id/editWriteZone7ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="12345"
                android:inputType="number"
                android:maxLength="5"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/labelWriteAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:padding="10dp" />

            <EditText
                android:id="@+id/editWriteAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="99, 7/99"
                android:inputType="textPostalAddress"
                android:maxLength="15"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimaryDark" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="50dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/buttonWriteWrite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_write" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>